--- a/index.html
+++ b/index.html
@@ -234,21 +234,14 @@
   </main>
 
   <!-- AGE GATE MODAL -->
-  <div id="ageGate" class="modal hidden">
-    <div class="modal-card">
-      <div class="modal-title">Age check</div>
-      <div class="modal-text">
-        Cocktails include alcohol. Are you of legal drinking age in your country?
-      </div>
-      <div class="row">
-        <button id="ageYes" class="btn">Yes</button>
-        <button id="ageNo" class="btn subtle">No</button>
-      </div>
-      <div class="small note">
-        Your choice is saved on this device only.
-      </div>
+  <div <div id="ageGate" class="agegate hidden" aria-hidden="true">
+  <div class="agegate-card">
+    <h2>18+ only</h2>
+    <p>Cocktails contain alcohol. Are you 18 or older?</p>
+    <div class="row">
+      <button id="ageYes" class="btn">Yes</button>
+      <button id="ageNo" class="btn subtle">No</button>
     </div>
-  </div>
 
   <script src="script.js"></script>
 </body>
