--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 </head>
 
 <body>
+  <!-- AGE VERIFICATION WALL (Cocktails) -->
+<div id="ageGate" class="agegate hidden">
+  <div class="agegate-card">
+    <h2>18+ only</h2>
+    <p>Cocktails contain alcohol. Are you 18 or older?</p>
+
+    <div class="agegate-actions">
+      <button id="ageYes" class="btn">Yes</button>
+      <button id="ageNo" class="btn subtle">No</button>
+    </div>
+  </div>
+</div>
   <header class="topbar">
     <div class="brand">
       <div class="logo">M</div>
