--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Morsel</title>
   <meta name="theme-color" content="#0f0f10" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=1">
+<script src="script.js?v=1"></script>
 </head>
 
 <body>
