--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
   <!-- NAV -->
   <nav class="nav">
+    <button class="navbtn" data-view="cocktailsView">Cocktails</button>
     <button class="navbtn active" data-view="recipesView">Recipes</button>
     <button class="navbtn" data-view="finderView">Finder</button>
     <button class="navbtn" data-view="bookView">My Book</button>
