--- a/index.html
+++ b/index.html
@@ -45,13 +45,16 @@
   </header>
 
   <!-- NAV -->
-  <nav class="nav">
-    <button class="navbtn" data-view="cocktailsView">Cocktails</button>
-    <button class="navbtn active" data-view="recipesView">Recipes</button>
-    <button class="navbtn" data-view="finderView">Finder</button>
-    <button class="navbtn" data-view="bookView">My Book</button>
-    <button class="navbtn" data-view="shopView">Shop</button>
-    <button class="navbtn" data-view="addView">Add</button>
+<nav class="nav">
+  <button class="navbtn active" data-view="recipesView">Recipes</button>
+  <button class="navbtn" data-view="finderView">Finder</button>
+  <button class="navbtn" data-view="bookView">My Book</button>
+  <button class="navbtn" data-view="shopView">Shop</button>
+  <button class="navbtn" data-view="addView">Add</button>
+
+  <!-- This triggers the age verification -->
+  <button class="navbtn" data-view="cocktailsView">Cocktails</button>
+</nav>
 
     <!-- IMPORTANT: this exact button triggers the age gate -->
     <button class="navbtn" data-view="cocktailsView">Cocktails</button>
