--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
   <button class="navbtn" data-view="bookView">My Book</button>
   <button class="navbtn" data-view="shopView">Shop</button>
   <button class="navbtn" data-view="addView">Add</button>
+  <button class="navbtn" data-view="cocktailsView">Cocktails</button>
+</nav>
 
   </nav>
 
